JumpScript/tests/baselines/reference/parser.numericSeparators.decmialNegative.errors.txt
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/1.jump(1,1): error TS2304: Cannot find name '_10'.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/10.jump(1,4): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/11.jump(1,5): error TS6189: Multiple consecutive numeric separators are not permitted.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/12.jump(1,2): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/13.jump(1,3): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/14.jump(1,4): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/15.jump(1,5): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/16.jump(1,1): error TS2304: Cannot find name '_0'.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/16.jump(1,3): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/17.jump(1,6): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/18.jump(1,3): error TS6189: Multiple consecutive numeric separators are not permitted.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/19.jump(1,5): error TS6189: Multiple consecutive numeric separators are not permitted.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/2.jump(1,3): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/20.jump(1,8): error TS6189: Multiple consecutive numeric separators are not permitted.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/21.jump(1,2): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/22.jump(1,4): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/23.jump(1,5): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/24.jump(1,6): error TS6189: Multiple consecutive numeric separators are not permitted.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/25.jump(1,2): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/26.jump(1,3): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/27.jump(1,4): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/28.jump(1,6): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/29.jump(1,1): error TS2304: Cannot find name '_0'.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/29.jump(1,3): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/3.jump(1,3): error TS6189: Multiple consecutive numeric separators are not permitted.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/30.jump(1,7): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/31.jump(1,3): error TS6189: Multiple consecutive numeric separators are not permitted.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/32.jump(1,5): error TS6189: Multiple consecutive numeric separators are not permitted.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/33.jump(1,9): error TS6189: Multiple consecutive numeric separators are not permitted.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/34.jump(1,2): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/35.jump(1,4): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/36.jump(1,5): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/37.jump(1,6): error TS6189: Multiple consecutive numeric separators are not permitted.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/38.jump(1,2): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/39.jump(1,3): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/4.jump(1,2): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/40.jump(1,4): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/41.jump(1,6): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/42.jump(1,1): error TS2304: Cannot find name '_0'.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/42.jump(1,3): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/43.jump(1,7): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/44.jump(1,3): error TS6189: Multiple consecutive numeric separators are not permitted.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/45.jump(1,5): error TS6189: Multiple consecutive numeric separators are not permitted.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/46.jump(1,9): error TS6189: Multiple consecutive numeric separators are not permitted.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/47.jump(1,1): error TS1128: Declaration or statement expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/47.jump(1,2): error TS2304: Cannot find name '_'.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/48.jump(1,2): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/48.jump(1,2): error TS2304: Cannot find name '\u005F01234'.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/49.jump(1,5): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/49.jump(1,6): error TS1124: Digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/5.jump(1,3): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/50.jump(1,5): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/50.jump(1,6): error TS1124: Digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/51.jump(1,3): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/6.jump(1,5): error TS6189: Multiple consecutive numeric separators are not permitted.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/7.jump(1,5): error TS6189: Multiple consecutive numeric separators are not permitted.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/8.jump(1,2): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/9.jump(1,3): error TS6188: Numeric separators are not allowed here.


==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/1.jump (1 errors) ====
    _10
    ~~~
!!! error TS2304: Cannot find name '_10'.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/2.jump (1 errors) ====
    10_
      ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/3.jump (1 errors) ====
    1__0
      ~
!!! error TS6189: Multiple consecutive numeric separators are not permitted.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/4.jump (1 errors) ====
    0_.0
     ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/5.jump (1 errors) ====
    0._0
      ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/6.jump (1 errors) ====
    0.0__0
        ~
!!! error TS6189: Multiple consecutive numeric separators are not permitted.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/7.jump (1 errors) ====
    0.0__
        ~
!!! error TS6189: Multiple consecutive numeric separators are not permitted.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/8.jump (1 errors) ====
    0_e0
     ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/9.jump (1 errors) ====
    0e_0
      ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/10.jump (1 errors) ====
    0e0_
       ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/11.jump (1 errors) ====
    0e0__0
        ~
!!! error TS6189: Multiple consecutive numeric separators are not permitted.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/12.jump (1 errors) ====
    0_.0e0
     ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/13.jump (1 errors) ====
    0._0e0
      ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/14.jump (1 errors) ====
    0.0_e0
       ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/15.jump (1 errors) ====
    0.0e_0
        ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/16.jump (2 errors) ====
    _0.0e0
    ~~
!!! error TS2304: Cannot find name '_0'.
      ~~~~
!!! error TS1005: ';' expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/17.jump (1 errors) ====
    0.0e0_
         ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/18.jump (1 errors) ====
    0__0.0e0
      ~
!!! error TS6189: Multiple consecutive numeric separators are not permitted.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/19.jump (1 errors) ====
    0.0__0e0
        ~
!!! error TS6189: Multiple consecutive numeric separators are not permitted.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/20.jump (1 errors) ====
    0.00e0__0
           ~
!!! error TS6189: Multiple consecutive numeric separators are not permitted.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/21.jump (1 errors) ====
    0_e+0
     ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/22.jump (1 errors) ====
    0e+_0
       ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/23.jump (1 errors) ====
    0e+0_
        ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/24.jump (1 errors) ====
    0e+0__0
         ~
!!! error TS6189: Multiple consecutive numeric separators are not permitted.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/25.jump (1 errors) ====
    0_.0e+0
     ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/26.jump (1 errors) ====
    0._0e+0
      ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/27.jump (1 errors) ====
    0.0_e+0
       ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/28.jump (1 errors) ====
    0.0e+_0
         ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/29.jump (2 errors) ====
    _0.0e+0
    ~~
!!! error TS2304: Cannot find name '_0'.
      ~~~~~
!!! error TS1005: ';' expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/30.jump (1 errors) ====
    0.0e+0_
          ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/31.jump (1 errors) ====
    0__0.0e+0
      ~
!!! error TS6189: Multiple consecutive numeric separators are not permitted.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/32.jump (1 errors) ====
    0.0__0e+0
        ~
!!! error TS6189: Multiple consecutive numeric separators are not permitted.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/33.jump (1 errors) ====
    0.00e+0__0
            ~
!!! error TS6189: Multiple consecutive numeric separators are not permitted.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/34.jump (1 errors) ====
    0_e+0
     ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/35.jump (1 errors) ====
    0e-_0
       ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/36.jump (1 errors) ====
    0e-0_
        ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/37.jump (1 errors) ====
    0e-0__0
         ~
!!! error TS6189: Multiple consecutive numeric separators are not permitted.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/38.jump (1 errors) ====
    0_.0e-0
     ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/39.jump (1 errors) ====
    0._0e-0
      ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/40.jump (1 errors) ====
    0.0_e-0
       ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/41.jump (1 errors) ====
    0.0e-_0
         ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/42.jump (2 errors) ====
    _0.0e-0
    ~~
!!! error TS2304: Cannot find name '_0'.
      ~~~~~
!!! error TS1005: ';' expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/43.jump (1 errors) ====
    0.0e-0_
          ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/44.jump (1 errors) ====
    0__0.0e-0
      ~
!!! error TS6189: Multiple consecutive numeric separators are not permitted.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/45.jump (1 errors) ====
    0.0__0e-0
        ~
!!! error TS6189: Multiple consecutive numeric separators are not permitted.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/46.jump (1 errors) ====
    0.00e-0__0
            ~
!!! error TS6189: Multiple consecutive numeric separators are not permitted.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/47.jump (2 errors) ====
    ._
    ~
!!! error TS1128: Declaration or statement expected.
     ~
!!! error TS2304: Cannot find name '_'.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/48.jump (2 errors) ====
    1\u005F01234
     ~~~~~~~~~~~
!!! error TS1005: ';' expected.
     ~~~~~~~~~~~
!!! error TS2304: Cannot find name '\u005F01234'.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/49.jump (2 errors) ====
    1.0e_+10
        ~
!!! error TS6188: Numeric separators are not allowed here.
         
!!! error TS1124: Digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/50.jump (2 errors) ====
    1.0e_-10
        ~
!!! error TS6188: Numeric separators are not allowed here.
         
!!! error TS1124: Digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/51.jump (1 errors) ====
    0._
      ~
!!! error TS6188: Numeric separators are not allowed here.
    